Fixes namespacing in admin less file

--- a/app/features/admin/admin.less
+++ b/app/features/admin/admin.less
@@ -1,37 +1,39 @@
-body.theme-cdap.state-admin main.container {
-  padding-left: 0;
-  padding-right: 0;
-  margin-left: 0;
-  margin-right: 0;
-}
+body.state-admin {
+  &.theme-cdap {
+    main.container {
+      padding-left: 0;
+      padding-right: 0;
+      margin-left: 0;
+      margin-right: 0;
 
-[admin] {
-  a {
-    color: white;
-  }
-  ul.sidebar {
-    margin: 0;
-    padding: 15px 5px;
-    height: 100vh;
-    background: #272b34;
-    color: white;
 
-    > ul {
-      padding: 0px 15px;
-    }
-
-    > li {
-      padding: 15px 5px;
-      list-style: none;
-
-      &:hover {
-        border-left: 2px solid #ee9900;
+      a {
+        color: white;
       }
+      ul.sidebar {
+        margin: 0;
+        padding: 15px 5px;
+        height: 100vh;
+        background: #272b34;
+        color: white;
 
-      .menu-title {
-        cursor: pointer;
+        > ul {
+          padding: 0px 15px;
+        }
+
+        > li {
+          padding: 15px 5px;
+          list-style: none;
+
+          &:hover {
+            border-left: 2px solid #ee9900;
+          }
+
+          .menu-title {
+            cursor: pointer;
+          }
+        }
       }
     }
   }
-
 }
